--- a/service4/src/main/resources/application.properties
+++ b/service4/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8083
 
-spring.neo4j.uri=${NEO4J_URI}
-spring.neo4j.authentication.username=${NEO4J_USERNAME}
-spring.neo4j.authentication.password=${NEO4J_PASSWORD}
-spring.data.neo4j.database=${NEO4J_DB}
-#database connection
-#spring.neo4j.uri=neo4j://localhost:7687
-#spring.neo4j.authentication.username=neo4j
-#spring.neo4j.authentication.password=Testing123
-#spring.data.neo4j.database=neo4j
+spring.application.name=neo4j-client
+spring.config.import=configserver:http://localhost:8888/
+management.endpoints.web.exposure.include=*
+
+#local database connection
+spring.neo4j.uri=neo4j://localhost:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=Testing123
+spring.data.neo4j.database=neo4j
