--- a/service4/src/main/resources/application.properties
+++ b/service4/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 server.port=8083
 
-spring.application.name=neo4j-client
-spring.config.import=configserver:http://localhost:8888/
-management.endpoints.web.exposure.include=*
-
-#local database connection
-spring.neo4j.uri=neo4j://localhost:7687
-spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=Testing123
-spring.data.neo4j.database=neo4j
+#database connection
+spring.neo4j.uri=<insert Neo4j URI here>
+spring.neo4j.authentication.username=<insert Neo4j username here>
+spring.neo4j.authentication.password=<insert Neo4j password here>
+spring.data.neo4j.database=<insert Neo4j database here>
